# aichallenge-ants-bot

./: .clang-format  CMakeLists.txt
src/: bot.cpp  bot.hpp  bug.hpp  location.hpp  my_bot.cpp  square.hpp  state.cpp  state.hpp  timer.hpp
